fix minor bug with CSS animation inhibiting sidebar function(adjusted z-index

--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,7 @@ span{
 	align-items: center;
 	font-family: sans-serif;
 	font-size: 42px;
+  z-index: 0;
 
 }
 
